[metadata]
name = pytown_model
description = pytown model
long_description = "pytown data model"
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
setup_requires =
  setuptools_scm

install_requires = pytown_core

[options.packages.find]
where = src

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1


